poprawki swaggera, logowania graphQl
