# controllers/auth-controller.js
@@ -6,6 +6,13 @@ const router = express.Router()
 const guestRole = ['guest']
 
 router.get("/auth", (req, res) => {
+  /*
+  #swagger.description = 'Authorization is necessary to use app
+  #swagger.responces[200] = {
+      description: 'Returns authorization guest token'
+    }      
+  }
+  */
   const payload = {
     userId: "",
     userName: "",
@@ -16,6 +23,17 @@ router.get("/auth", (req, res) => {
 })
 
 router.post("/login", async (req, res) => {
+  /*
+  #swagger.description = 'LogIn to application
+  #swagger.parameters['body] = {
+    in: 'body',
+    description: 'credentials: email and password',
+    schema: {
+      Email: 'exampleUser@mail.net',
+      Password: 'qwerty1234'
+    }    
+  }
+*/
   let token = getHeaderToken(req)
   const authResult = checkAuth(token, guestRole)
   if (!authResult.success) {
@@ -27,11 +45,21 @@ router.post("/login", async (req, res) => {
 
   const credentials = req.body
   if (!credentials) {
+    /*
+    #swagger.responces[400] = {
+      description: 'Bad request.'
+    } 
+    */
     res.status(400)
     return
   }
   const findResult = await findAccount(credentials)
   if (!findResult?.Email) {
+    /*
+    #swagger.responses[401] = {
+      description: 'Wrong credentials.'
+    }
+    */
     res.status(401).json('Wrong credentials')
     return
   }
@@ -39,10 +67,15 @@ router.post("/login", async (req, res) => {
   const payload = {
     userId: findResult.Id,
     userName: findResult.Email,
-    roles: findResult.Roles.map(r => r.role)
+    roles: findResult.Roles.map(r => r.Name)
   }
   token = generateToken(payload)
 
+  /*
+   #swagger.responces[200] = {
+    description: 'Returns json: token: String, isAuthorized: Boolean'
+  }
+  */
   res.status(200).json({
     token: token,
     isAuthorized: true
@@ -72,7 +105,8 @@ router.post("/register", async (req, res) => {
         
   const roles = [
     { Name: 'guest'},
-    { Name: 'Admin'}
+    { Name: 'user'},
+    { Name: 'admin'}
   ]
   inputResult = await registerUser(inputUser, roles)
   if (inputResult) {
